# cleo

./: .bazelignore  .bazelrc  .gitignore  AGENTS.md  BUILD.bazel  GETTING_STARTED.md  MODULE.bazel  install.sh  package.json  pnpm-lock.yaml  pyproject.toml
apps/: color_blind.py  face_detection.py  food_macros.py  food_macros_app_instructions.md  navigation_assist.py  navigator.py  notetaking.py  notetaking_app_instructions.md  object_recognition.py  recording.py  save_video.py  tool_base.py  track_item.py  weather.py
assistant/: bedrock.py  registry.py  service.py
core/: config.py  frame_processor.py  main.py
data/: embedding.py  service.py
data/vector/: faiss_db.py
docs/diagrams/: 1_tool_calling.html  2_video_interop.html  3_embedding_pipeline.html  4_aws_services.html  5_user_flow.html
frontend/viture-luma-display/: .gitignore  package.json  pnpm-lock.yaml
frontend/viture-luma-display/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
frontend/viture-luma-display/src-tauri/capabilities/: default.json
frontend/viture-luma-display/src-tauri/src/: audio.rs  audio_devices.rs  config.rs  display.rs  errors.rs  grpc_client.rs  lib.rs  main.rs  media_store.rs  protocol.rs  state.rs
protos/: assistant.proto  color_blind.proto  data.proto  frontend.proto  generate.sh  sensor.proto  tool.proto  transcription.proto
scripts/: bootstrap_bazel.sh  demo_navigator.py  generate_demo_images.py  reconstruct_camera_chunks.py  test_e2e_assistant.py  test_face_detection.py  test_food_vision_bedrock_client.py  test_frontend_visual.py  test_live_mic_transcribe.py  test_notetaking_service.py
services/: broadcast.py  config.py  frontend_service.py  main.py  sensor_service.py  website_api.py
services/assistant/: bedrock.py  registry.py  service.py
services/data/: embedding.py  service.py
services/frontend/: service.py  voice.py
services/media/: __init__.py  camera_transport.py  sensor_service.py
services/transcription/: instructions.md  live_mic_transcribe.py  parakeet_upgrade_plan.md  service.py  transcription_purpose.md
services/video/: service.py
tests/: conftest.py
tests/apps/: test_color_blind.py  test_color_blind_logic.py  test_food_macros.py  test_item_retreivel.py  test_recording.py  test_save_video.py  test_track_item.py  test_weather.py
tests/assistant/: test_bedrock.py  test_registry.py  test_service.py
tests/core/: test_broadcast.py  test_frame_processor.py
tests/data/: test_app_registration.py  test_app_registration_rpc.py  test_data_service.py  test_embedding.py
tests/face_detection/: test_face_detection.py
tests/integration/: conftest.py  test_hardware.py
tests/navigator/: test_navigator.py
tests/services/: conftest.py  test_broadcast.py  test_frontend_service.py  test_sensor_service.py  test_tool_services.py  test_voice.py
tests/transcription/: conftest.py  test_parakeet.py  test_service.py
tests/video/: conftest.py  test_video_service.py
tools/bazel/: backend_build.sh  backend_run.sh  backend_test.sh  common.sh  frontend_build.sh  frontend_install.sh  frontend_run.sh  frontend_test.sh  (+5 more)
transcription/: instructions.md  live_mic_transcribe.py  parakeet.py  transcription.py
website/: index.html  instructions.md  package.json  pnpm-lock.yaml  vite.config.ts
(+52 files in other folders)
